Prevent horizontal jump as scrollbars appear

--- a/src/core/_template.scss
+++ b/src/core/_template.scss
@@ -11,6 +11,12 @@
     // Prevent automatic text sizing, as we already cater for small devices and
     // would like the browser to stay on 100% text zoom by default.
     text-size-adjust: 100%;
+
+    // Force the scrollbar to always display in IE, to prevent horizontal page
+    // jumps as content height changes (e.g. autocomplete results open).
+    @include govuk-media-query($media-type: screen) {
+      overflow-y: scroll;
+    }
   }
 
   // Applied to the <body> element
